moved isopene to group-1

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -43,6 +43,8 @@
     url: /topics/group-1/slijeci_project
   - title: Tuulivarenka project
     url: /topics/group-1/tuulivarenka_zeppelin2010_2015_particleplot
+  - title: Isoprene project
+    url: /topics/group-1/Isoprene
 
 - title: Group-2
   url: /topics/group-2/intro
